# marsvin-matrix-container-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-code.sh  marsvin.hpp
.github/workflows/: build-job.yml  clang-format.yml  deploy-jobs.yaml
core/include/: marsvin.hpp  marsvin_base_matrix.hpp  marsvin_base_matrix.impl.hpp  marsvin_datatypes.hpp  marsvin_differential.hpp  marsvin_error_code.hpp  marsvin_error_type.hpp  marsvin_exception.hpp  marsvin_instance_counter.hpp  marsvin_logger.hpp  marsvin_lud_partial_pivoting.hpp  marsvin_matrix.hpp  marsvin_matrix.impl.hpp  marsvin_status_code.hpp  marsvin_status_type.hpp  marsvin_tools.hpp  marsvin_vector.hpp  marsvin_vector.impl.hpp
core/src/: marsvin_error_code.cpp  marsvin_exception.cpp  marsvin_status_code.cpp
differential-calculus/include/: marsvin_differential.hpp
differential-calculus/src/: differential.cpp
docs/: Doxyfile  main_page.md
documentation/: Doxyfile  main.md  main_page.md
examples/: build-examples.sh
examples/01_matrices/: main.cpp
examples/02_matricas_operations/: main.cpp
examples/02_matrices_operations/: main.cpp
examples/02_matrix_constructors/: CMakeLists.txt  main.cpp
examples/03_differential/: main.cpp
marsvin/: CMakeLists.txt  marsvin.hpp
marsvin/differential-calculus/include/: marsvin_differential.hpp
marsvin/linear-algebra/include/: marsvin_basic_operations.hpp  marsvin_matrix.hpp  marsvin_matrix_operations.hpp
marsvin/linear-algebra/src/: basic_operations.cpp  matrix_operations.cpp
marsvin/tools/include/: marsvin_matrix.hpp
marsvin/tools/src/: matrix.cpp
test/: CMakeLists.txt  addTest.cmake  test_marsvin_backward_substitution.cpp  test_marsvin_base_matrix.cpp  test_marsvin_error_code.cpp  test_marsvin_exception.cpp  test_marsvin_forward_substitution.cpp  test_marsvin_instance_counter.cpp  test_marsvin_lower_inverse.cpp  test_marsvin_lud_partial_pivoting.cpp  test_marsvin_matrix.cpp  test_marsvin_status_code.cpp  test_marsvin_tools.cpp  test_marsvin_upper_inverse.cpp  test_marsvin_vector.cpp
test/unit/: CMakeLists.txt  (+2 more)
(+34 files in other folders)
